Compress is semi-working